# Fathom

./: .gitignore  .gitmodules  README.md  config.yaml  file_info.md  final_architecture.md  implementation.md  manage.py  plan.md  project.md  pyproject.toml  requirements.txt  setup.sh
sample_java_project/: index.scip  pom.xml
sample_java_project/src/main/java/com/example/: Main.java
src/fathom/: __init__.py  dependency_manager.py  indexer.py  librarian.py  scip_integrator.py  scip_pb2.py  searcher.py
src/fathom.egg-info/: PKG-INFO  SOURCES.txt
src/fathom/fathom_grammars/: scip_pb2.py
src/fathom/offline/: indexer.py  parser.py
src/fathom/online/: main.py  scip_querier.py
